--- a/index_admin.html
+++ b/index_admin.html
@@ -20,10 +20,12 @@
     <div id="mainform">
         
     </div>
+    <div id="reader"></div>
     <div class="formdiv">
-        <button class="boxy" id="go">Download CSV</button>
+        <button class="boxy" id="download">Download CSV</button>
     </div>
     <!-- <a href="index_admin.html" id="admin_link">Teacher</a> -->
-    <script src="index.js"></script>
+    <script src="https://unpkg.com/html5-qrcode"></script>
+    <script src="admin_js.js"></script>
 </body>
 </html>
