--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="/media/logo3.png">
+    <link rel="icon" href="/media/logo2.png">
 </head>
 <body>
     <div class="header">
-        <a href="index_admin.html"><img src="media/logo3.png" alt="Logo" height="85px"></a>
+        <a href="index_admin.html"><img src="media/logo2.png" alt="Logo" height="85px"></a>
         <!-- <img id ='logo' src="media/logo3.png" alt="logo" height="85px" > -->
         <h1 id='heading'>automated attendence system<br>(Student)</h1>
     </div>
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="formdiv">
-        <button class="boxy" id="go">Mark my Spot</button>
+        <button class="boxy" id="download">Mark my Spot</button>
     </div>
     <!-- <a href="index_admin.html" id="admin_link">Teacher</a> -->
     <script src="index.js"></script>
