--- a/index_admin.html
+++ b/index_admin.html
@@ -9,17 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="/media/logo3.png">
+    <link rel="icon" href="/media/logo2.png">
 </head>
 <body>
     <div class="header">
-        <img id ='logo' src="media/logo3.png" alt="logo" height="75px" >
+        <img id ='logo' src="media/logo2.png" alt="logo" height="75px" >
         <h1 id='heading'>automated attendence system<br>(Teacher)</h1>
     </div>
     <div id="imageContainer"></div> 
     <div id="reader"></div>
     <div class="formdiv">
-        <button class="boxy" id="download">Download CSV</button>
+        <button class="boxy" id="download" onclick="generateCSV()">Download CSV</button>
     </div>
     <!-- <a href="index_admin.html" id="admin_link">Teacher</a> -->
     <script src="https://unpkg.com/html5-qrcode"></script>
