--- a/index_admin.html
+++ b/index_admin.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <div class="header">
-        <img id ='logo' src="media/logo2.png" alt="logo" height="75px" >
+        <a href="index.html"><img src="media/logo2.png" alt="Logo" height="85px"></a>
+        <!-- <img id ='logo' src="media/logo2.png" alt="logo" height="75px" > -->
         <h1 id='heading'>automated attendence system<br>(Teacher)</h1>
     </div>
     <div id="imageContainer"></div> 
