--- a/index_admin.html
+++ b/index_admin.html
@@ -17,7 +17,17 @@
         <!-- <img id ='logo' src="media/logo2.png" alt="logo" height="75px" > -->
         <h1 id='heading'>automated attendence system<br>(Teacher)</h1>
     </div>
-    <div id="imageContainer"></div> 
+    <div>
+        <table id="marked">
+            <tr>
+                <td class="cell">Name</td>
+                <td class="cell">Roll no</td>
+                <td class="cell">Section</td>
+                <td class="cell">Student ID</td>
+                <td class="cell">Campus</td>
+            </tr>
+        </table>
+    </div>
     <div id="reader"></div>
     <div class="formdiv">
         <button class="boxy" id="download" onclick="generateCSV()">Download CSV</button>
