--- a/index_admin.html
+++ b/index_admin.html
@@ -34,6 +34,6 @@
     </div>
     <!-- <a href="index_admin.html" id="admin_link">Teacher</a> -->
     <script src="https://unpkg.com/html5-qrcode"></script>
-    <script src="admin_js.js"></script>
+    <script src="index_admin.js"></script>
 </body>
 </html>
