--- a/index_admin.html
+++ b/index_admin.html
@@ -1,39 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">  
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>automated attendence system</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
+    <title>Teacher | QR Attendence system</title>
+    <link rel="icon" href="/media/logo2.png">
+
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" crossorigin rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="/media/logo2.png">
 </head>
+
 <body>
-    <div class="header">
-        <a href="index.html"><img src="media/logo2.png" alt="Logo" height="85px"></a>
-        <!-- <img id ='logo' src="media/logo2.png" alt="logo" height="75px" > -->
-        <h1 id='heading'>automated attendence system<br>(Teacher)</h1>
+    <nav class="navbar navbar-expand p-2">
+        <div class="container-fluid my-1">
+            <a href="index.html"><img class="mx-2" src="media/logo2.png" height="80px"></a>
+            <h2 class="text-header text-light me-auto ms-2"><b>QR Attendence system (Teacher)</b></h2>
+        </div>
+    </nav>
+    <div class="container my-4 row m-auto" oncontextmenu="return false;">
+        <div class="my-2" id="tabparent">
+            <div class="col-xl-6 col-lg-12 m-auto">
+                    <table class="table table-light">
+                        <thead>
+                            <tr>
+                                <th class="text-uppercase text-header table-dark text-center" scope="col"></th>
+                                <th class="text-uppercase text-header table-dark text-center" scope="col">Name</th>
+                                <th class="text-uppercase text-header table-dark text-center" scope="col">Roll no</th>
+                                <th class="text-uppercase text-header table-dark text-center" scope="col">Section</th>
+                                <th class="text-uppercase text-header table-dark text-center" scope="col">Student ID</th>
+                                <th class="text-uppercase text-header table-dark text-center" scope="col">Campus</th>
+                            </tr>
+                        </thead>
+                        <tbody id="marked">
+                        </tbody>
+                    </table>
+                <div id="reader"></div>
+                <button type="submit" id="download" class="btn btn-outline-success btn-lg mb-3 col-12 text-header"
+                    onclick="generateCSV()"><b>Download CSV</b></button>
+            </div>
+        </div>
     </div>
-    <div>
-        <table id="marked">
-            <tr>
-                <td class="cell">Name</td>
-                <td class="cell">Roll no</td>
-                <td class="cell">Section</td>
-                <td class="cell">Student ID</td>
-                <td class="cell">Campus</td>
-            </tr>
-        </table>
+    <div class="position-absolute top-50 end-0 translate-middle-y socials">
+        <div class="btn-group-vertical social-links" role="group" aria-label="Vertical button group">
+            <a class="p-2 m-1 text-light h1" href="https://www.linkedin.com/in/ayush-saklani/" target="_blank"><i
+                    class="devicon-github-original"></i></a>
+            <a class="p-2 m-1 text-light h1" href="https://github.com/ayush-saklani" target="_blank"><i
+                    class="devicon-linkedin-plain"></i></a>
+        </div>
     </div>
-    <div id="reader"></div>
-    <div class="formdiv">
-        <button class="boxy" id="download" onclick="generateCSV()">Download CSV</button>
-    </div>
-    <!-- <a href="index_admin.html" id="admin_link">Teacher</a> -->
+
     <script src="https://unpkg.com/html5-qrcode"></script>
     <script src="index_admin.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
