--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
             <div id="imageContainer"></div>
             <div class="col-md-6 m-auto">
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control text-header" id="name_val" placeholder="name@example.com">
-                    <label for="floatingInput" class="text-header">Name</label>
+                    <input type="text" class="form-control text-header" id="name_val">
+                    <label for="name_val" class="text-header">Name</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="number" class="form-control text-header" id="roll_val">
-                    <label for="floatingPassword" class="text-header">Roll no</label>
+                    <label for="roll_val" class="text-header">Roll no</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="number" class="form-control text-header" id="studentid_val">
-                    <label for="floatingPassword" class="text-header">Student ID</label>
+                    <label for="studentid_val" class="text-header">Student ID</label>
                 </div>
                 <div class="form-floating mb-3">
                     <select class="form-select text-header" id="campus_val">
                       <option selected value="GEHU">GEHU</option>
                       <option value="GEU">GEU</option>
                     </select>
-                    <label for="floatingSelect" class="text-header">Campus</label>
+                    <label for="campus_val" class="text-header">Campus</label>
                 </div>
                 <div class="form-floating mb-3">
                     <select class="form-select text-header" id="section_val">
@@ -77,7 +77,7 @@
                       <option value="Y">Y</option>
                       <option value="Z">Z</option>
                     </select>
-                    <label for="floatingSelect" class="text-header">Section</label>
+                    <label for="section_val" class="text-header">Section</label>
                 </div>
                 <button type="submit" id="download" class="btn btn-outline-info btn-lg mb-3 col-12 text-header"><b>Mark my Spot</b></button>
             </div>
@@ -91,7 +91,9 @@
                     class="devicon-linkedin-plain"></i></a>
         </div>
     </div>
-    
+    <div id="mrmime" class="position-absolute bottom-0 end-0">    
+        <img src="media/pika.png" height="100px">
+    </div>
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
