--- a/index_admin.html
+++ b/index_admin.html
@@ -56,7 +56,9 @@
                     class="devicon-linkedin-plain"></i></a>
         </div>
     </div>
-
+    <div id="mrmime" class="position-absolute bottom-0 end-0">    
+        <img src="media/pika.png" height="100px">
+    </div>
     <script src="https://unpkg.com/html5-qrcode"></script>
     <script src="index_admin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
